# php8-xdebug

./: .dockerignore  .gitignore  .hadolint.yaml  README.md  docker-compose.yml  php-dev-8.dockerfile  settings.toml
.github/workflows/: docker-image.yml  docker-publish.yml  main.yml
app/: Test.php  index.php
bins/: xdebug-mode
conf/: supervisord.conf
conf/nginx/: nginx-config  nginx.conf
conf/nginx/conf.d/: compression.conf  vhost.conf
entrypoint/: entrypoint.sh
entrypoint/scripts/: apply_environments.sh  config_replace.sh  docker_install.sh
generator/: Cargo.toml  Dockerfile  settings.toml  template.dockerfile
generator/src/: dockerfiles.rs  generate.rs  main.rs  structs.rs  template_parser.rs
php/: opcache-jit.ini  pcov.ini  profiler.php  xdebug.ini  xhprof.ini
templates/: dependencies.alpine.dockerfile  dependencies.debian.dockerfile  docker.partial.dockerfile  nginx.partial.dockerfile  template.dockerfile
user/: .vimrc  bashconfig.sh
